# perceval

./: CMakeLists.txt  README.md  install.sh
src/: main.cc
src/adapter/: adapter.cc  adapter.hh  convertion.cc  convertion.hh  listenerCalls.cc  pgn-move.cc  pgn-parser.cc  pgn-parser.hh
src/ai/: metadata.cc  metadata.hh  refutation_table.cc  refutation_table.hh  time_management.cc  time_management.hh  transposition_table.cc  transposition_table.hh  uci.cc  uci.hh
src/ai/evaluation/: evaluation.cc  evaluation.hh  late_game.cc  late_game.hh  mid_game.cc  mid_game.hh  move_ordering.cc
src/ai/helpers/: helper.cc  helper.hh
src/ai/move_ordering/: move_ordering.cc  move_ordering.hh
src/ai/search/: iterative_deepening.cc  min_max.cc  quiescence.cc  search.hh
src/board/: board.cc  board.hh  move.cc  move.hh  movemanager.cc  moves_capture.cc  parser.cc  parser.hh  rules.cc
src/ia/: hash.cc  hash.hh  ia.cc  ia.hh  ia_env.hh  iterative_deepening.cc  time_management.cc  time_management.hh  transposition_table.cc  transposition_table.hh  uci.cc  uci.hh
src/ia/evaluation/: evaluation.cc  evaluation.hh  evalutation.cc  move_ordering.cc
src/ia/helpers/: helper.cc  helper.hh
src/ia/search-moves/: iterative_deepening.cc  min_max.cc  move_ordering.cc  quiescence.cc  transposition_table.cc
src/includes/: adapter.hh  board.hh  chessBoard.hh  chessboard-interface.hh  chessboard.hxx  color.hh  convertion.hh  generate.hh  generate.hxx  helper.hh  ia.hh  ia_env.hh  listener.hh  listenerCalls.hh  move_ordering.hh  moveprinter.hh  oui.hh  perft.hh  pgn-exception.hh  pgn-move.hh  piece-type.hh  pieces.hh  position.hh  position.hxx  rules.hh  stock.hh  transposition_table.hh  uci.hh  utype.hh
src/listener/: moveprinter.cc
src/magic/: generate.cc  magic.cc  magic.hh
src/perft/: perft.cc  perft.hh
tests/bad_board/: output.py  perft.py
tests/perft/: P3.perft  P4.perft  P5.perft  a.py  basic_3.perft  castlings.perft  jules.perft  k.perft  kiwipete.perft  perft-test.sh  romain.perft  shit.perft  tmp  tower.perft  w-winning.perft
tests/pgn/: pgn-test.sh
