cmake_minimum_required(VERSION 3.16)
project(perceval)

if (NOT CMAKE_BUILD_TYPE)
    message("set to release mode")
    set(CMAKE_BUILD_TYPE "Release")
endif ()


# C++ standard version
set(CMAKE_CXX_STANDARD 17)
# General flags
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
# Release flags only
# Maybe consider: -funroll-loops -fisolate-erroneous-paths-attribute
# -fipa-pta : Perform interprocedural pointer analysis and interprocedural modification and reference analysis.
# -ftree-loop-if-convert : Attempt to transform conditional jumps in the innermost loops to branch-less equivalents.

set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Ofast -march=native -fipa-pta -ftree-loop-linear -floop-strip-mine -floop-block -ftree-loop-if-convert -ftree-parallelize-loops=8")
# Debug flags only (inside cmake-build-debug)
# -pg : analyse time per functions
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0")

# There should not be files after chessengine. If so -> move it to target sources.
add_executable(chessengine)

target_sources(chessengine PRIVATE
        src/ai/metadata.cc
        src/ai/search/quiescence.cc
        src/ai/helpers/helper.cc
        src/ai/search/iterative_deepening.cc
        src/adapter/pgn-exception.cc
        src/adapter/pgn-move.cc
        src/adapter/pgn-parser.cc
        src/ai/uci.cc
        src/board/board.cc
        src/board/move.cc
        src/adapter/adapter.cc
        src/perft/perft.cc
        src/board/movemanager.cc
        src/adapter/convertion.cc
        src/adapter/listenerCalls.cc
        src/main.cc
        src/ai/evaluation/evaluation.cc
        src/ai/search/min_max.cc
        src/board/moves_capture.cc
        src/ai/move_ordering/move_ordering.cc
        src/ai/transposition_table.cc
        src/magic/magic.cc
        src/ai/evaluation/mid_game.cc
        src/ai/evaluation/late_game.cc
)

target_include_directories(chessengine
        PRIVATE src/includes)
target_link_libraries(chessengine
        PRIVATE pthread boost_system boost_program_options dl)
target_compile_options(chessengine
        PRIVATE -Wall -Wextra -pedantic -Werror)


message(
"                                                         ..
                                                         ..
                                            . .          .
             .            ..     ..      .  ....         .
             .            .. .......,,,,........         .
                        ..,****//(/(//*/***,,...      .  .
                   .,,*/*****/*,*****/*////////**.    ....
               ..*//*********,*//************/////, ......                .
  .          ..,***/*****/***,/,.,,,*********/**///(*.....
.            .,,,*******///,.**,,,,,,***/*/***////((/(*...               .
..          .,*******,,*,/******,,,,****/**//****/*/((/*,.  .     .      .
           .,*,,,,*,,,****,**,********////*//**////(///**.  .    ..     ..
 .        .**..,,*,*,,**,*,,****//*/////((/////////////***  .. .  ..    .
 .....    .,,.,,,,,,,,**,*,,******////(/(/(((/////////*/**  .......   ..  .
........ .....,,,,.,,,**,**,*****/////////////////**/*****,......... ....
 .       .....,,.,.,,,.**,*****/**//*//((////////*******,*..............
    .      ....,,..,,,.,******//////////////////////***,**,..............
           ........,,,,.,****/////////((((((//(((/////***,,........ .....
         . .....,.,,,,,,,*****//*/*****/(((/(/**,*****,,,*,...............
      . .  .., ...,,,,,,*****,,,**,,,,**//////**,,,,***,,*,...............
       .   .....,.,*,,********,,,...,,,**/(/*,,.,.,.,**,**,................
            ....,,*/***********/***(/*////#(//((**(//(/***.................
           ......,,*/****/((#((((((((((((((((((((((###(***.................
          . ....,,****,,*//(((########((///#(((######((***.................
       ..   ...,,,.,**,,**//(((#######(////(#(((#(#((((,**.  .... ........ ..
      ..     .,,.*.,,*,***///(((#####(/***/##(((((((((/,, .   .   .. ....  ..
     .,.      ,,,,,,,,,***////((((#(((/***/(((//((((//*.  .........  .... ...
     ...,...   .,,..,,,***/////(((((((/,,.,,**/((((///*.  ....... ....... ....
      .....    .  ...,,,**/////(((((((//******//(((//*..  .....   ....... ....
      ., .    ........,,***///(((((//***/////////////*.   ............... ..
            ..,**,,...,,*,**///((/****/*,,,,,,,,**//*(.   .............. ..
,..       ....,****,...,,,****/////((////((((//////**#/.*/,.............  .
/ .    .  ...,,,///**,..,.,**,*///(/////******////*,(#/  .*.... ..,.....  .
.  .       ...,,,/////,.....,,,**/((((((((//((((/**(##....    .,,....,..
.........    ..,,,/////*,..,.,,,,*//(/(((/((/(((/*((#*    ..... .,*,...,.
......,//,  .. ..,,**/////,,,,,....**////*////((//((((,....**........,,..,.  ..
...,,,,,,,*/*.,. ..,,,*/*///,.,,,....,*,,,,,**///(//(*,..,*/*,,,,....,/*,..,,.
.**********,,(/,*,...,,,*/////,,,,,,,,,,,,,,**//(**///*,,,*,,*****//*,.. .,...,
,,,,,**/////**,/*,//...,,,*////*,,,,,,,,,,**///,.*,//,,*//****************/,...
,,,,,,****////*,**./&&*...,,,*//***,,,,****/*. ,,,**./*/((/////*******,,,,**//(
*************//***/,.,&@&(/...,,,**,,,,,,....,*,,*,/(*(((((((//////***********,
*//**//****///////*/%,*&&&(*,,,,*,,*,.****,/,*/#*%&%#####((((////////******
////*//((##(/((/////&&%%##/,,/#%%#(((##((*,.,,,,,,&*(&&@@&%%%%%%%%#######((//((
(///*/((#%(////((/*/&&&&&&&&%%#(//,*,,*,,*//*,,,,(%/%&&&&&&%%%%%&%%%%%%%######(
(((((/(((#(##%##*,/%&&&&&&&&&&&&%%#(##(/(((//*,,,%(#&&&&@@@&&&&%%&&&&&&%%%%%%##
###%%%%&&&&@@&(**/%&&&&&&&&%#%%%%#%#(((((((//*,,,#(#&&%%%&&&&@&&&&&&&%%%%%%%%%%
%&@@@@@@@(.*(*.(%%%%%&%%%%&%%%##(((/((((/**,,,,,%/#%##%&&&&%&&&&&&&%%%%%%%%%%
@@&&%#(./(#%(,*/*/,(%%%%%%%%%%###(////((//***,,,,,(*(#%%%&&&%&%&&&&&%%%%%%%%%%%
%*,,//(/*.,/...*,,/*#%%%%%#%%%##((((((//***,,,,,.,.(*/#%%%%##%&&&%%##%%####%%%%
*#...,,. **.,**,/*/(%##%%%%%%%##(((((//***,,,,,**,  */(((((%%#%%%%%%%%#%%%%%%##
 .. .,.,,,,,*,..*/###(#%%((/###(((#((///**/,.**,... ../,/*///((##//((########(/
..***,*,.,/. /,,*/#%%##%&%/(###((((((///****/,....,,, .,.*//*(%,**.,,**////***/
.  ,*,. ., ..,,.,/#%%#%%##%%%####%%/((((##/........,, .,...,. ,,..*/(((***.,,**
., .,. ,,.,***.,,*(##%%##%#(/(###(,,(##(*.,,.,...., ,**,,.,,..  ., .,...,,**/*.
  . ,  .*,*.,,***//((#%###((##(//(###*,**,*,,,,....*. *, . ,,,.,..,,..*, .,....
,,  ...../,,*,*****/(((##%%##(((/*#*//*,**,,,,.....,....*,.. ,*. .,, ...,,,,,*.
,,*  ....,.,,**///*//(########(###(///**,,,,,....,.,**., .*  ...,. ****..*,....
 ,,. ... ,.,,**///**/(((#####((((/*****,*,,,......,, .,..  **.,..*,  ,... ,.,*,
")
